--- a/medgastro6/api-folder/requirements.txt
+++ b/medgastro6/api-folder/requirements.txt
@@ -1,9 +1,20 @@
+# Core ML and Deep Learning
 torch>=2.0.0
 torchvision>=0.15.0
 transformers>=4.30.0
-datasets>=2.12.0
-Pillow>=9.5.0
+timm>=0.9.0
+
+# Data Processing
 numpy>=1.24.0
+Pillow>=9.5.0
 scikit-learn>=1.2.0
+datasets>=2.12.0
 tqdm>=4.65.0
-timm>=0.9.0 
+
+# Web Framework
+flask>=2.0.0
+flask-cors>=3.0.0
+
+# Additional Dependencies
+requests>=2.28.0
+python-dotenv>=0.19.0 
