--- a/medgastro6/.gitignore
+++ b/medgastro6/.gitignore
@@ -71,6 +71,30 @@ wheels/
 .venv
 venv/
 ENV/
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+.hypothesis/
+.pytest_cache/
+cover/
+*.mo
+*.pot
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+instance/
+.webassets-cache
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.python-version
 
 # Flutter/Dart
 .dart_tool/
@@ -92,6 +116,12 @@ android/app/release/
 *.swp
 *.swo
 .DS_Store
+*.sublime-workspace
+*.sublime-project
+.project
+.classpath
+.settings/
+*.code-workspace
 
 # Model files and datasets
 *.h5
@@ -106,7 +136,73 @@ models/
 *.json
 api-folder/dataset_chunks/
 api-folder/dataset_chunks/**/*
+api-folder/dataset_cache/
+api-folder/saved_models/
+*.npy
+*.npz
+*.hdf5
+*.model
+*.weights
+*.tflite
+*.lite
+*.mlmodel
+*.mlpackage
+*.tfl
+*.pb
+*.ckpt
+*.meta
+*.index
+*.data-00000-of-00001
+*.tfevents.*
+*.tfrecord
+*.tfrecords
+*.parquet
+*.feather
+*.arrow
+*.db
+*.sqlite
+*.sqlite3
 
-# Logs
+# Logs and temporary files
 *.log
 logs/
+tmp/
+temp/
+.tmp/
+.temp/
+*.tmp
+*.temp
+*.bak
+*.swp
+*.swo
+*~
+*.pid
+*.seed
+*.pid.lock
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+lerna-debug.log*
+.npm
+.eslintcache
+.stylelintcache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.node_repl_history
+*.tsbuildinfo
+next-env.d.ts
+.nuxt
+.docusaurus
+.serverless/
+.fusebox/
+.dynamodb/
+.tern-port
+.vscode-test
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
