--- a/medgastro6/api-folder/requirements.txt
+++ b/medgastro6/api-folder/requirements.txt
@@ -5,16 +5,31 @@ transformers>=4.30.0
 timm>=0.9.0
 
 # Data Processing
-numpy>=1.24.0
-Pillow>=9.5.0
+numpy==1.21.2
+Pillow==8.3.2
 scikit-learn>=1.2.0
 datasets>=2.12.0
 tqdm>=4.65.0
 
 # Web Framework
-flask>=2.0.0
-flask-cors>=3.0.0
+flask==2.0.1
+flask-cors==3.0.10
+flask-swagger-ui==3.36.0
+tensorflow==2.8.0
 
 # Additional Dependencies
-requests>=2.28.0
-python-dotenv>=0.19.0 
+requests==2.26.0
+python-dotenv==0.19.0
+gunicorn==20.1.0
+pytest==6.2.5
+pytest-cov==2.12.1
+black==21.7b0
+flake8==3.9.2
+mypy==0.910
+python-json-logger==2.0.2
+prometheus-client==0.11.0
+redis==3.5.3
+pytest-mock==3.6.1
+pytest-asyncio==0.15.1
+firebase-admin==5.0.3
+google-cloud-storage==2.0.0 
