--- a/medgastro6/api-folder/requirements.txt
+++ b/medgastro6/api-folder/requirements.txt
@@ -1,35 +1,38 @@
 # Core ML and Deep Learning
-torch>=2.0.0
-torchvision>=0.15.0
-transformers>=4.30.0
-timm>=0.9.0
+torch>=2.2.0
+torchvision>=0.17.0
+transformers>=4.37.0
+timm>=0.9.12
 
 # Data Processing
-numpy==1.21.2
-Pillow==8.3.2
-scikit-learn>=1.2.0
-datasets>=2.12.0
-tqdm>=4.65.0
+numpy>=1.26.0
+Pillow>=10.2.0
+scikit-learn>=1.4.0
+datasets>=2.16.0
+tqdm>=4.66.0
 
 # Web Framework
-flask==2.0.1
-flask-cors==3.0.10
-flask-swagger-ui==3.36.0
-tensorflow==2.8.0
+flask>=3.0.0
+flask-cors>=4.0.0
+flask-swagger-ui>=4.11.0
 
 # Additional Dependencies
-requests==2.26.0
-python-dotenv==0.19.0
-gunicorn==20.1.0
-pytest==6.2.5
-pytest-cov==2.12.1
-black==21.7b0
-flake8==3.9.2
-mypy==0.910
-python-json-logger==2.0.2
-prometheus-client==0.11.0
-redis==3.5.3
-pytest-mock==3.6.1
-pytest-asyncio==0.15.1
-firebase-admin==5.0.3
-google-cloud-storage==2.0.0 
+requests>=2.31.0
+python-dotenv>=1.0.0
+gunicorn>=21.2.0
+pytest>=8.0.0
+pytest-cov>=4.1.0
+black>=24.1.0
+flake8>=7.0.0
+mypy>=1.8.0
+python-json-logger>=2.0.7
+prometheus-client>=0.19.0
+redis>=5.0.0
+pytest-mock>=3.12.0
+pytest-asyncio>=0.23.0
+firebase-admin>=6.4.0
+google-cloud-storage>=2.14.0
+# For multipart/form-data parsing
+werkzeug>=3.0.0
+# For YAML config parsing (if needed)
+pyyaml>=6.0.0 
