--- a/medgastro6/pubspec.yaml
+++ b/medgastro6/pubspec.yaml
@@ -31,17 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.4.0
-  firebase_core: ^3.13.0
-  firebase_auth: ^5.5.3
-  cloud_firestore: ^5.0.1
-  firebase_storage: ^12.4.5
-  image_picker_plus: ^0.5.9  # Version récente de image_picker (mise à jour)
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  firebase_storage: ^11.5.6
+  image_picker_plus: ^0.5.9
   image_picker: ^1.1.2
   convert: ^3.1.2
   google_sign_in: ^6.3.0
   provider: ^6.0.5
   shared_preferences: ^2.2.2
-  firebase_messaging: ^15.2.7
+  firebase_messaging: ^14.7.9
   flutter_local_notifications: ^16.3.2
   google_fonts: ^6.2.1
 
